# ha-wattpilot

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  hacs.json  info.md  pyproject.toml  pytest.ini  requirements.txt  set_values_test.py
.claude/: settings.local.json
.claude/projects/-workspaces-ha-wattpilot/memory/: MEMORY.md  dev-verification-setup.md  pytest-asyncio-pin-constraint.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: ci.yml  codecov.yml  release.yml  stale.yml  validate.yml
custom_components/wattpilot/: __init__.py  button.py  button.yaml  config_flow.py  configuration_schema.py  const.py  coordinator.py  descriptions.py  diagnostics.py  entities.py  icons.json  manifest.json  number.py  number.yaml  py.typed  quality_scale.yaml  select.py  select.yaml  sensor.py  sensor.yaml  services.py  services.yaml  strings.json  switch.py  switch.yaml  time.py  types.py  update.py  update.yaml  utils.py
custom_components/wattpilot/translations/: de.json  en.json
custom_components/wattpilot/wattpilot/: PKG-INFO  README.md  setup.py
custom_components/wattpilot/wattpilot/src/wattpilot/: __init__.py  wattpilotshell.py
scripts/: develop  lint  setup  test
tests/: __init__.py  conftest.py  test_button.py  test_config_flow.py  test_config_flow_basic.py  test_config_flow_integration.py  test_config_flow_logic.py  test_configuration_schema.py  test_coordinator.py  test_coordinator_comprehensive.py  test_coverage_completion.py  test_coverage_improvements.py  test_coverage_platforms.py  test_diagnostics.py  test_entities.py  test_entities_comprehensive.py  test_entities_execution.py  test_entities_logic.py  test_init.py  test_init_integration.py  test_init_logic.py  test_number.py  test_platform_entities.py  test_platform_yamls.py  test_platforms_comprehensive.py  test_select.py  test_sensor.py  test_services.py  test_services_comprehensive.py  test_services_core_logic.py  test_services_direct.py  test_services_execution.py  test_services_integration.py  test_switch.py  test_time.py  test_update.py  test_update_comprehensive.py  test_utils.py  test_utils_comprehensive.py  test_yaml_configurations.py
tests/fixtures/: __init__.py  charger_properties.json  expected_entity_states.json
