[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["custom_components/wattpilot"]

[project]
name = "ha-wattpilot"
version = "0.5.0"
description = "Home Assistant integration for Fronius Wattpilot EV chargers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13.2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "wattpilot-api>=1.0.0",
    "pyyaml>=5.3.0",
    "importlib_metadata>=4.0.0",
    "packaging>=24.0",
]

[project.urls]
"Homepage" = "https://github.com/ruaan-deysel/ha-wattpilot"
"Bug Tracker" = "https://github.com/ruaan-deysel/ha-wattpilot/issues"
"Documentation" = "https://github.com/ruaan-deysel/ha-wattpilot#readme"

[dependency-groups]
dev = [
    "homeassistant>=2025.6.3",
    "colorlog>=6.10.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "ruff>=0.14.4",
    "pre-commit>=4.0.0",
    "codespell>=2.4.0",
    "yamllint>=1.37.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["custom_components/wattpilot"]
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 90

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S106", "ARG002", "F841", "B017"]
